# fifth

./: pyproject.toml
fifth/: console.py  wikipedia.py
tests/: test_console.py  test_wikipedia.py
